force-app/main/default/objects/Monthly_Payment_Adjustment_History__c/Monthly_Payment_Adjustment_History__c.object-meta.xml
<CustomObject>
    <label>Monthly Payment Adjustment History</label>
    <nameField>
        <displayFormat>MPAH-{00000}</displayFormat>
        <label>Monthly Payment Adjustment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Payment Adjustment Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>