force-app/main/default/objects/Monthly_Payment_Adjustment_History__c/fields/Entered_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Entered_Adjustment__c</fullName>
    <label>Entered Adjustment</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>