force-app/main/default/objects/Monthly_Payment_Adjustment_History__c/fields/Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment__c</fullName>
    <label>Monthly Payment</label>
    <referenceTo>MonthlyPayment__c</referenceTo>
    <relationshipLabel>Adjustment Histories</relationshipLabel>
    <relationshipName>Adjustment_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>