force-app/main/default/objects/Monthly_Payment_Adjustment_History__c/fields/Price_Before__c.field-meta.xml
<CustomField>
    <fullName>Price_Before__c</fullName>
    <label>Price Before</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>