force-app/main/default/objects/Monthly_Payment_Adjustment_History__c/fields/Resulting_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Resulting_Adjustment__c</fullName>
    <label>Resulting Adjustment</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>